// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: application > implicit insertion > inserts implicit argument when applying explicit arg to fn with implicit param 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "?2 @ ?1",
      "String ~~ String",
    ],
    "term": "((λ(x: (?1 :: Type)) =>
  (λ(y: String) -> y : Π(y: String) -> String) : Π(x: (?1 :: Type)) =>
  Π(y: String) -> String))
  @(?2 :: (?1 :: Type))
  "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts implicit argument with correct type 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
      "?1 @ Num",
      "String ~~ String",
    ],
    "term": "((λ(x: Num) => (λ(y: String) -> y : Π(y: String) -> String) : Π(x: Num) =>
  Π(y: String) -> String))
  @(?1 :: Num)
  "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts multiple implicit arguments when needed 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "?3 @ ?2",
      "?4 @ ?1",
      "String ~~ String",
    ],
    "term": "((λ(a: (?1 :: Type)) =>
  ((λ(b: (?2 :: Type)) =>
    (λ(c: String) -> c : Π(c: String) -> String) : Π(b: (?2 :: Type)) =>
    Π(c: String) -> String))
    @(?3 :: (?2 :: Type)) : Π(a: (?1 :: Type)) => Π(c: String) -> String))
  @(?4 :: (?1 :: Type))
  "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > simple application f x 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?1",
    ],
    "term": "((λ(x: (?1 :: Type)) -> x : Π(x: (?1 :: Type)) -> (?1 :: Type))) 1",
    "type": "?1",
  },
}
`;
